@@ -1,5 +1,6 @@
     -0.5.3  - redvypr.rem_device() added and cleaned redvyprWidget.closeTab()
             - distribute_data has now connection to main thread via redvypr.redvyprqueue to check for updates done by main thread
+            - maximum device threshold added: config_template['redvypr_device']['max_devices']  = 1
     -0.5.2  - subscriptions as a config key for devices added
             - improved configuration parsing
             - iored with a rep/req information exchange instead of multicast. Multicast optional for broadcasting presence.
